<resources>
    <string name="app_name">spotnotifier</string>
    <string name="welcome_message" translatable="true">Bem vindo ao SpotNotifier</string>
    <string name="user_name" translatable="true">Insira o primeiro nome</string>
    <string name="user_last_name" translatable="true">Insira o último nome</string>
    <string name="password" translatable="true">Insira a sua palavra-passe</string>
    <string name="email" translatable="true">Insira o seu Email</string>
    <string name="register_button">Registar</string>
    <string name="first_name_label">Primeiro nome</string>
    <string name="last_name_label">último nome</string>
    <string name="email_label">Email</string>
    <string name="email_input_alert">O campo de email é obrigatório</string>
    <string name="password_label">Palavra-passe</string>
    <string name="new_password">Nova palavra passe</string>
    <string name="insert_recovery_code">Insira o código</string>
    <string name="retype_password">Repita nova palavra-passe</string>
    <string name="return_icon">Ícone de retorno</string>
    <string name="logo">Logótipo</string>
    <string name="add_img">Adicionar imagem</string>
    <string name="user_login_name">Insira seu nome de utilizador</string>
    <string name="user_name_label_login">Nome de utilizador</string>
    <string name="button_login">Entrar</string>
    <string name="recovery_password_button">Por favor verifique a sua caixa de email</string>
    <string name="forgot_password">Esqueceu a sua palavra-passe</string>
    <string name="signIn">Ainda não é utilizador? Regista-se</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="button_spot_places">Vagas</string>
    <string name="save_address">Guardar morada</string>
    <string name="save_email">Guardar endereço de email</string>
    <string name="evaluation_spot">Availação da vaga</string>
    <string name="found_spot">Encontrou uma vaga disponível?</string>
    <string name="yes_radio">Sim</string>
    <string name="no_radio">Não</string>
    <string name="send_message">Deseja deixar um comentário?</string>
    <string name="send_message_place_holder">Deixe aqui o seu comentário</string>
    <string name="save_evaluation">Guardar avaliação da vaga</string>
    <string name="change_password">Alterar palavra-passe</string>
    <string name="change_image">Alterar imagem</string>
    <string name="change_address">Alterar morada</string>
    <string name="change_contact">Alterar contacto</string>
    <string name="recovery_email_alert">Email de recuperação enviado</string>
    <string name="authentication_alert">Autenticação realizada com sucesso</string>
    <string name="authentication_alert_fail">Falha ao autenticar</string>
    <string name="create_user_fail">Falha ao criar utilizador</string>
    <string name="create_user_success">Utilizador criado com sucesso</string>
    <string name="input_hint_maps">Pesquise aqui</string>
    <string name="insert_your_code">Por favor, insira o código recebido no email</string>
    <string name="insert_your_new_password">Por favor, insira a nova palavra-passe</string>
    <string name="new_password_success">Nova palavra-passe inserida com sucesso</string>
    <string name="error_new_password">Erro ao redefinir palavra-passe</string>
    <string name="create_account_success">Conta criada com sucesso</string>
    <string name="please_select_an_option">Por favor selecione uma opção</string>
    <string name="message_sent">Mensagem enviada com sucesso</string>
    <string name="error_sent_message">Error ao enviar a mensagem</string>
</resources>