<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="231dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="259dp"
        tools:layout_editor_absoluteY="403dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="70dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/welcome_message"
        android:textColor="@color/light_blue"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/name_label"
        android:layout_width="144dp"
        android:layout_height="17dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/user_name_label_login"
        android:textColor="@color/dark_blue" />

    <EditText
        android:id="@+id/main_et_name"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:autofillHints="username"
        android:background="@drawable/border_input"
        android:fontFamily="@font/montserrat"
        android:gravity="center_vertical"
        android:hint="@string/user_login_name"
        android:inputType="textEmailAddress"
        android:paddingStart="24dp"
        android:paddingEnd="0dp"
        app:layout_constraintBottom_toTopOf="@+id/main_et_last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/returnIconView" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="114dp"
        android:layout_height="17dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/montserrat"
        android:labelFor="@id/main_et_password"
        android:text="@string/password_label"
        android:textColor="@color/dark_blue" />

    <EditText
        android:id="@+id/main_et_password"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:background="@drawable/border_input"
        android:fontFamily="@font/montserrat"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="24dp"
        android:paddingEnd="0dp"
        app:layout_constraintBottom_toTopOf="@+id/main_btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_et_email" />


    <Button
        android:id="@+id/main_btn_register"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/dark_orange"
        android:fontFamily="@font/montserrat"
        android:onClick="login"
        android:text="@string/button_login"
        tools:layout_editor_absoluteX="145dp" />


    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:onClick='recovery'
        android:text="@string/forgot_password"
        android:textColor="@color/light_blue"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="70dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/signIn"
        android:textColor="@color/dark_orange"
        android:textSize="16sp" />


</LinearLayout>